Añade descripciones de corteza de estrellas de neutrones, la interpolación PCHIP para unificación y verificación de causalidad.

--- a/Libro_Trabajo_de_Grado/Tesis.bib
+++ b/Libro_Trabajo_de_Grado/Tesis.bib
@@ -75,6 +75,31 @@
   author = {Baade, W. and Zwicky, F.}
 }
 
+@article{baymGroundStateMatter1971,
+  title = {The {{Ground State}} of {{Matter}} at {{High Densities}}: {{Equation}} of {{State}} and {{Stellar Models}}},
+  shorttitle = {The {{Ground State}} of {{Matter}} at {{High Densities}}},
+  year = {1971},
+  journal = {ApJ},
+  volume = {170},
+  pages = {299},
+  doi = {10.1086/151216},
+  langid = {english},
+  author = {Baym, Gordon and Pethick, Christopher and Sutherland, Peter}
+}
+
+@article{baymNeutronStarMatter1971,
+  title = {Neutron Star Matter},
+  year = {1971},
+  journal = {Nuclear Physics A},
+  volume = {175},
+  number = {2},
+  pages = {225--271},
+  doi = {10.1016/0375-9474(71)90281-8},
+  copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
+  langid = {english},
+  author = {Baym, Gordon and Bethe, Hans A. and Pethick, Christopher J}
+}
+
 @article{biswasGW190814PropertiesSecondary2021,
   title = {{{GW190814}}: On the Properties of the Secondary Component of the Binary},
   shorttitle = {{{GW190814}}},
@@ -362,18 +387,6 @@
   author = {Li, Bao-An and Krastev, Plamen G. and Wen, De-Hua and Zhang, Nai-Bo and others}
 }
 
-@article{liUnderstandingAstrophysicalEffects2019a,
-  title = {Towards Understanding Astrophysical Effects of Nuclear Symmetry Energy},
-  year = {2019},
-  journal = {Eur. Phys. J. A},
-  volume = {55},
-  number = {7},
-  pages = {117},
-  doi = {10.1140/epja/i2019-12780-8},
-  langid = {english},
-  author = {Li, Bao-An and Krastev, Plamen G. and Wen, De-Hua and Zhang, Nai-Bo and others}
-}
-
 @article{lopesNatureMassgapObject2022,
   title = {On the {{Nature}} of the {{Mass-gap Object}} in the {{GW190814 Event}}},
   year = {2022},
@@ -385,7 +398,7 @@
   author = {Lopes, Luiz L. and Menezes, Debora P.}
 }
 
-@article{lopesRoleSymmetryEnergy2024a,
+@article{lopesRoleSymmetryEnergy2024,
   title = {Role of the Symmetry Energy Slope in Neutron Stars: {{Exploring}} the Model Dependency},
   shorttitle = {Role of the Symmetry Energy Slope in Neutron Stars},
   year = {2024},
@@ -395,6 +408,7 @@
   pages = {015805},
   doi = {10.1103/PhysRevC.110.015805},
   langid = {english},
+  keywords = {High Energy Physics - Phenomenology,Nuclear Theory},
   author = {Lopes, Luiz L.}
 }
 
@@ -583,7 +597,7 @@
   author = {Schwarzschild, K.}
 }
 
-@article{shaoNeutronStarBlack2022a,
+@article{shaoNeutronStarBlack2022,
   title = {On the {{Neutron Star}}/{{Black Hole Mass Gap}} and {{Black Hole Searches}}},
   year = {2022},
   journal = {Res. Astron. Astrophys.},
@@ -591,6 +605,7 @@
   number = {12},
   pages = {122002},
   doi = {10.1088/1674-4527/ac995e},
+  keywords = {Astrophysics - High Energy Astrophysical Phenomena,Astrophysics - Solar and Stellar Astrophysics},
   author = {Shao, Yong}
 }
 
