Añade wrapfig para facilidad en acomodación de figuras

--- a/Libro_Trabajo_de_Grado/main.tex
+++ b/Libro_Trabajo_de_Grado/main.tex
@@ -23,6 +23,7 @@
 \usepackage[utf8]{inputenc} % Acentos y otros símbolos 
 \usepackage{enumerate} % Páginas
 \usepackage{graphicx}
+\usepackage{wrapfig} % Texto al lado de imagenes
 \usepackage{multirow}
 \usepackage{physics}
 \usepackage{subcaption}
