Incluye capitulo de resultados y discusión. Primera versión.

--- a/Libro_Trabajo_de_Grado/Tesis.bib
+++ b/Libro_Trabajo_de_Grado/Tesis.bib
@@ -1,7 +1,7 @@
 @article{abbottGW170817MeasurementsNeutron2018,
   title = {{{GW170817}}: {{Measurements}} of {{Neutron Star Radii}} and {{Equation}} of {{State}}},
   shorttitle = {{{GW170817}}},
-  year = {2018},
+  year = 2018,
   journal = {Phys. Rev. Lett.},
   volume = {121},
   number = {16},
@@ -13,7 +13,7 @@
 
 @article{annalaMultimessengerConstraintsUltradense2022,
   title = {Multimessenger Constraints for Ultra-Dense Matter},
-  year = {2022},
+  year = 2022,
   journal = {Phys. Rev. X},
   volume = {12},
   number = {1},
@@ -27,7 +27,7 @@
 
 @article{antoniadisMassivePulsarCompact2013,
   title = {A {{Massive Pulsar}} in a {{Compact Relativistic Binary}}},
-  year = {2013},
+  year = 2013,
   journal = {Science},
   volume = {340},
   number = {6131},
@@ -41,7 +41,7 @@
 
 @misc{ascenziNeutronstarMeasurementsMultimessenger2024,
   title = {Neutron-Star {{Measurements}} in the {{Multi-messenger Era}}},
-  year = {2024},
+  year = 2024,
   number = {arXiv:2401.14930},
   eprint = {2401.14930},
   publisher = {arXiv},
@@ -52,7 +52,7 @@
 
 @article{baadeRemarksSuperNovaeCosmic1934,
   title = {Remarks on {{Super-Novae}} and {{Cosmic Rays}}},
-  year = {1934},
+  year = 1934,
   journal = {Phys. Rev.},
   volume = {46},
   number = {1},
@@ -65,7 +65,7 @@
 
 @article{baadeSuperNovae1934,
   title = {On {{Super-Novae}}},
-  year = {1934},
+  year = 1934,
   journal = {Proc. Natl. Acad. Sci. U.S.A.},
   volume = {20},
   number = {5},
@@ -78,7 +78,7 @@
 @article{baymGroundStateMatter1971,
   title = {The {{Ground State}} of {{Matter}} at {{High Densities}}: {{Equation}} of {{State}} and {{Stellar Models}}},
   shorttitle = {The {{Ground State}} of {{Matter}} at {{High Densities}}},
-  year = {1971},
+  year = 1971,
   journal = {ApJ},
   volume = {170},
   pages = {299},
@@ -89,7 +89,7 @@
 
 @article{baymNeutronStarMatter1971,
   title = {Neutron Star Matter},
-  year = {1971},
+  year = 1971,
   journal = {Nuclear Physics A},
   volume = {175},
   number = {2},
@@ -103,7 +103,7 @@
 @article{biswasGW190814PropertiesSecondary2021,
   title = {{{GW190814}}: On the Properties of the Secondary Component of the Binary},
   shorttitle = {{{GW190814}}},
-  year = {2021},
+  year = 2021,
   journal = {Monthly Notices of the Royal Astronomical Society},
   volume = {505},
   number = {2},
@@ -116,7 +116,7 @@
 
 @article{bogutaRelativisticCalculationNuclear1977,
   title = {Relativistic Calculation of Nuclear Matter and the Nuclear Surface},
-  year = {1977},
+  year = 1977,
   journal = {Nuclear Physics A},
   volume = {292},
   number = {3},
@@ -129,7 +129,7 @@
 
 @book{chandrasekharIntroductionStudyStellar1970,
   title = {An Introduction to the Study of Stellar Structure},
-  year = {1970},
+  year = 1970,
   series = {Dover Books on Astronomy},
   edition = {Unabr. and corr. republ. of orig. publ. 1939 by Univ. of Chicago Pr},
   publisher = {Dover Publ},
@@ -142,7 +142,7 @@
 @misc{chatziioannouNeutronStarsDense2024,
   title = {Neutron Stars and the Dense Matter Equation of State: From Microscopic Theory to Macroscopic Observations},
   shorttitle = {Neutron Stars and the Dense Matter Equation of State},
-  year = {2024},
+  year = 2024,
   number = {arXiv:2407.11153},
   eprint = {2407.11153},
   publisher = {arXiv},
@@ -153,7 +153,7 @@
 
 @article{chinEquationStateNuclear1974,
   title = {An Equation of State for Nuclear and Higher-Density Matter Based on Relativistic Mean-Field Theory},
-  year = {1974},
+  year = 1974,
   journal = {Physics Letters B},
   volume = {52},
   number = {1},
@@ -167,7 +167,7 @@
 @misc{choudhuryNICERViewNearest2024,
   title = {A {{NICER View}} of the {{Nearest}} and {{Brightest Millisecond Pulsar}}: {{PSR J0437-4715}}},
   shorttitle = {A {{NICER View}} of the {{Nearest}} and {{Brightest Millisecond Pulsar}}},
-  year = {2024},
+  year = 2024,
   eprint = {2407.06789},
   doi = {10.3847/2041-8213/ad5a6f},
   archiveprefix = {arXiv},
@@ -178,7 +178,7 @@
 @misc{collaborationGWTC21DeepExtended2022,
   title = {{{GWTC-2}}.1: {{Deep Extended Catalog}} of {{Compact Binary Coalescences Observed}} by {{LIGO}} and {{Virgo During}} the {{First Half}} of the {{Third Observing Run}}},
   shorttitle = {{{GWTC-2}}.1},
-  year = {2022},
+  year = 2022,
   number = {arXiv:2108.01045},
   eprint = {2108.01045},
   publisher = {arXiv},
@@ -189,7 +189,7 @@
 
 @article{damourRelativisticTidalProperties2009,
   title = {Relativistic Tidal Properties of Neutron Stars},
-  year = {2009},
+  year = 2009,
   journal = {Phys. Rev. D},
   volume = {80},
   number = {8},
@@ -201,9 +201,20 @@
   author = {Damour, Thibault and Nagar, Alessandro}
 }
 
+@article{drischlerGroundingNuclearPhysics2021,
+  title = {Towards Grounding Nuclear Physics in {{QCD}}},
+  year = 2021,
+  journal = {Progress in Particle and Nuclear Physics},
+  volume = {121},
+  pages = {103888},
+  doi = {10.1016/j.ppnp.2021.103888},
+  langid = {english},
+  author = {Drischler, Christian and Haxton, Wick and McElvain, Kenneth and Mereghetti, Emanuele and others}
+}
+
 @article{dutraRelativisticMeanFieldHadronic2014,
   title = {Relativistic {{Mean-Field Hadronic Models}} under {{Nuclear Matter Constraints}}},
-  year = {2014},
+  year = 2014,
   journal = {Phys. Rev. C},
   volume = {90},
   number = {5},
@@ -217,7 +228,7 @@
 
 @article{einsteinFeldgleichungenGravitation1915,
   title = {Die {{Feldgleichungen}} Der {{Gravitation}}},
-  year = {1915},
+  year = 1915,
   journal = {Sitzungsberichte der K{\"o}niglich Preussischen Akademie der Wissenschaften},
   pages = {844--847},
   annotation = {ADS Bibcode: 1915SPAW.......844E},
@@ -226,7 +237,7 @@
 
 @article{esteeProbingSymmetryEnergy2021,
   title = {Probing the {{Symmetry Energy}} with the {{Spectral Pion Ratio}}},
-  year = {2021},
+  year = 2021,
   journal = {Phys. Rev. Lett.},
   volume = {126},
   number = {16},
@@ -239,7 +250,7 @@
 @article{fonsecaNANOGravNineyearData2016,
   title = {The {{NANOGrav Nine-year Data Set}}: {{Mass}} and {{Geometric Measurements}} of {{Binary Millisecond Pulsars}}},
   shorttitle = {The {{NANOGrav Nine-year Data Set}}},
-  year = {2016},
+  year = 2016,
   journal = {ApJ},
   volume = {832},
   number = {2},
@@ -253,7 +264,7 @@
 
 @article{fonsecaRefinedMassGeometric2021,
   title = {Refined {{Mass}} and {{Geometric Measurements}} of the {{High-mass PSR J0740}}+6620},
-  year = {2021},
+  year = 2021,
   journal = {ApJL},
   volume = {915},
   number = {1},
@@ -264,7 +275,7 @@
 
 @article{garpmanThermodynamicBehaviorNonstrange1979,
   title = {Thermodynamic Behavior of Non-Strange Baryonic Matter},
-  year = {1979},
+  year = 1979,
   journal = {Nuclear Physics A},
   volume = {322},
   number = {2-3},
@@ -278,7 +289,7 @@
 @book{glendenningCompactStarsNuclear2000,
   title = {Compact Stars: Nuclear Physics, Particle Physics, and General Relativity},
   shorttitle = {Compact Stars},
-  year = {2000},
+  year = 2000,
   series = {Astronomy and Astrophysics Library},
   edition = {2nd ed},
   publisher = {Springer},
@@ -291,7 +302,7 @@
 
 @article{guoInsightsNeutronStar2024,
   title = {Insights into {{Neutron Star Equation}} of {{State}} by {{Machine Learning}}},
-  year = {2024},
+  year = 2024,
   journal = {ApJ},
   volume = {965},
   number = {1},
@@ -302,7 +313,7 @@
 
 @misc{guoWhiteDwarfStructure2024,
   title = {White {{Dwarf Structure}} and {{Binary Inspiral Gravitational Waves}} from {{Quantum Hadrodynamics}}},
-  year = {2024},
+  year = 2024,
   number = {arXiv:2410.06088},
   eprint = {2410.06088},
   publisher = {arXiv},
@@ -313,7 +324,7 @@
 
 @misc{horvathBirthEventsMasses2020,
   title = {Birth Events, Masses and the Maximum Mass of {{Compact Stars}}},
-  year = {2020},
+  year = 2020,
   number = {arXiv:2011.08157},
   eprint = {2011.08157},
   publisher = {arXiv},
@@ -326,7 +337,7 @@
 @article{huangConstrainingRelativisticMean2024,
   title = {Constraining a Relativistic Mean Field Model Using Neutron Star Mass--Radius Measurements {{I}}: Nucleonic Models},
   shorttitle = {Constraining a Relativistic Mean Field Model Using Neutron Star Mass--Radius Measurements {{I}}},
-  year = {2024},
+  year = 2024,
   journal = {Monthly Notices of the Royal Astronomical Society},
   volume = {529},
   number = {4},
@@ -339,7 +350,7 @@
 
 @article{khanConstrainingNuclearEquation2012,
   title = {Constraining the {{Nuclear Equation}} of {{State}} at {{Subsaturation Densities}}},
-  year = {2012},
+  year = 2012,
   journal = {Phys. Rev. Lett.},
   volume = {109},
   number = {9},
@@ -352,7 +363,7 @@
 
 @article{kumarTheoreticalExperimentalConstraints2024,
   title = {Theoretical and Experimental Constraints for the Equation of State of Dense and Hot Matter},
-  year = {2024},
+  year = 2024,
   journal = {Living Rev Relativ},
   volume = {27},
   number = {1},
@@ -364,7 +375,7 @@
 
 @article{lalazissisNewParametrizationLagrangian1997,
   title = {New Parametrization for the {{Lagrangian}} Density of Relativistic Mean Field Theory},
-  year = {1997},
+  year = 1997,
   journal = {Phys. Rev. C},
   volume = {55},
   number = {1},
@@ -377,7 +388,7 @@
 
 @article{liUnderstandingAstrophysicalEffects2019,
   title = {Towards Understanding Astrophysical Effects of Nuclear Symmetry Energy},
-  year = {2019},
+  year = 2019,
   journal = {Eur. Phys. J. A},
   volume = {55},
   number = {7},
@@ -389,7 +400,7 @@
 
 @article{lopesNatureMassgapObject2022,
   title = {On the {{Nature}} of the {{Mass-gap Object}} in the {{GW190814 Event}}},
-  year = {2022},
+  year = 2022,
   journal = {ApJ},
   volume = {936},
   number = {1},
@@ -401,7 +412,7 @@
 @article{lopesRoleSymmetryEnergy2024,
   title = {Role of the Symmetry Energy Slope in Neutron Stars: {{Exploring}} the Model Dependency},
   shorttitle = {Role of the Symmetry Energy Slope in Neutron Stars},
-  year = {2024},
+  year = 2024,
   journal = {Phys. Rev. C},
   volume = {110},
   number = {1},
@@ -414,7 +425,7 @@
 
 @article{millerPSRJ0030+0451Mass2019,
   title = {{{PSR J0030}}+0451 {{Mass}} and {{Radius}} from {{NICER Data}} and {{Implications}} for the {{Properties}} of {{Neutron Star Matter}}},
-  year = {2019},
+  year = 2019,
   journal = {The Astrophysical Journal},
   volume = {887},
   pages = {L24},
@@ -427,7 +438,7 @@
 
 @article{millerRadiusPSRJ0740+66202021,
   title = {The {{Radius}} of {{PSR J0740}}+6620 from {{NICER}} and {{XMM-Newton Data}}},
-  year = {2021},
+  year = 2021,
   journal = {ApJL},
   volume = {918},
   number = {2},
@@ -438,7 +449,7 @@
 
 @book{misnerGravitation2017,
   title = {Gravitation},
-  year = {2017},
+  year = 2017,
   publisher = {Princeton University Press},
   address = {Princeton, N.J},
   isbn = {978-0-691-17779-3},
@@ -450,7 +461,7 @@
 
 @article{myersNuclearPropertiesAccording1996,
   title = {Nuclear Properties According to the {{Thomas-Fermi}} Model},
-  year = {1996},
+  year = 1996,
   journal = {Nuclear Physics A},
   volume = {601},
   number = {2},
@@ -463,7 +474,7 @@
 
 @article{oliinychenkoSensitivityAuAu2023,
   title = {Sensitivity of {{Au}} + {{Au}} Collisions to the Symmetric Nuclear Matter Equation of State at 2--5 Nuclear Saturation Densities},
-  year = {2023},
+  year = 2023,
   journal = {Phys. Rev. C},
   volume = {108},
   number = {3},
@@ -475,7 +486,7 @@
 
 @article{oppenheimerMassiveNeutronCores1939,
   title = {On {{Massive Neutron Cores}}},
-  year = {1939},
+  year = 1939,
   journal = {Phys. Rev.},
   volume = {55},
   number = {4},
@@ -488,7 +499,7 @@
 
 @article{ozelMassesRadiiEquation2016,
   title = {Masses, {{Radii}}, and {{Equation}} of {{State}} of {{Neutron Stars}}},
-  year = {2016},
+  year = 2016,
   journal = {Annu. Rev. Astron. Astrophys.},
   volume = {54},
   number = {1},
@@ -502,7 +513,7 @@
 
 @book{peskinIntroductionQuantumField2018,
   title = {An {{Introduction To Quantum Field Theory}}},
-  year = {2018},
+  year = 2018,
   edition = {0},
   publisher = {CRC Press},
   doi = {10.1201/9780429503559},
@@ -514,7 +525,7 @@
 @article{pianMergersBinaryNeutron2021,
   title = {Mergers of {{Binary Neutron Star Systems}}: {{A Multimessenger Revolution}}},
   shorttitle = {Mergers of {{Binary Neutron Star Systems}}},
-  year = {2021},
+  year = 2021,
   journal = {Front. Astron. Space Sci.},
   volume = {7},
   pages = {609460},
@@ -524,7 +535,7 @@
 
 @article{raaijmakersConstraintsDenseMatter2021,
   title = {Constraints on the {{Dense Matter Equation}} of {{State}} and {{Neutron Star Properties}} from {{NICER}}'s {{Mass}}--{{Radius Estimate}} of {{PSR J0740}}+6620 and {{Multimessenger Observations}}},
-  year = {2021},
+  year = 2021,
   journal = {ApJL},
   volume = {918},
   number = {2},
@@ -535,7 +546,7 @@
 
 @article{radutaEquationsStateHot2022,
   title = {Equations of State for Hot Neutron Stars-{{II}}. {{The}} Role of Exotic Particle Degrees of Freedom},
-  year = {2022},
+  year = 2022,
   journal = {Eur. Phys. J. A},
   volume = {58},
   number = {6},
@@ -547,7 +558,7 @@
 
 @article{reiseneggerOrderofmagnitudePhysicsNeutron2016,
   title = {Order-of-Magnitude Physics of Neutron Stars},
-  year = {2016},
+  year = 2016,
   journal = {Eur. Phys. J. A},
   volume = {52},
   number = {3},
@@ -561,7 +572,7 @@
 
 @article{rileyNICERViewMassive2021,
   title = {A {{NICER View}} of the {{Massive Pulsar PSR J0740}}+6620 {{Informed}} by {{Radio Timing}} and {{XMM-Newton Spectroscopy}}},
-  year = {2021},
+  year = 2021,
   journal = {ApJL},
   volume = {918},
   number = {2},
@@ -576,7 +587,7 @@
 @article{romaniPSRJ09520607Fastest2022,
   title = {{{PSR J0952}}-0607: {{The Fastest}} and {{Heaviest Known Galactic Neutron Star}}},
   shorttitle = {{{PSR J0952}}-0607},
-  year = {2022},
+  year = 2022,
   journal = {ApJL},
   volume = {934},
   number = {2},
@@ -587,7 +598,7 @@
 
 @misc{schwarzschildGravitationalFieldMass1999,
   title = {On the Gravitational Field of a Mass Point According to {{Einstein}}'s Theory},
-  year = {1999},
+  year = 1999,
   number = {arXiv:physics/9905030},
   eprint = {physics/9905030},
   publisher = {arXiv},
@@ -599,7 +610,7 @@
 
 @article{shaoNeutronStarBlack2022,
   title = {On the {{Neutron Star}}/{{Black Hole Mass Gap}} and {{Black Hole Searches}}},
-  year = {2022},
+  year = 2022,
   journal = {Res. Astron. Astrophys.},
   volume = {22},
   number = {12},
@@ -612,7 +623,7 @@
 @book{shapiroBlackHolesWhite2008,
   title = {Black {{Holes}}, {{White Dwarfs}} and {{Neutron Stars}}: {{The Physics}} of {{Compact Objects}}},
   shorttitle = {Black {{Holes}}, {{White Dwarfs}} and {{Neutron Stars}}},
-  year = {2008},
+  year = 2008,
   edition = {1. Auflage},
   publisher = {Wiley-VCH},
   address = {Weinheim},
@@ -623,7 +634,7 @@
 
 @article{tayaEstimationElectricField2024,
   title = {Estimation of Electric Field in Intermediate-Energy Heavy-Ion Collisions},
-  year = {2024},
+  year = 2024,
   journal = {Phys. Rev. C},
   volume = {110},
   number = {1},
@@ -636,7 +647,7 @@
 @article{theligoscientificcollaborationGW170817ObservationGravitational2017,
   title = {{{GW170817}}: {{Observation}} of {{Gravitational Waves}} from a {{Binary Neutron Star Inspiral}}},
   shorttitle = {{{GW170817}}},
-  year = {2017},
+  year = 2017,
   journal = {Phys. Rev. Lett.},
   volume = {119},
   number = {16},
@@ -651,7 +662,7 @@
 @article{theligoscientificcollaborationGW190814GravitationalWaves2020,
   title = {{{GW190814}}: {{Gravitational Waves}} from the {{Coalescence}} of a 23 {{M}}\$\_{\textbackslash}odot\$ {{Black Hole}} with a 2.6 {{M}}\$\_{\textbackslash}odot\$ {{Compact Object}}},
   shorttitle = {{{GW190814}}},
-  year = {2020},
+  year = 2020,
   journal = {ApJL},
   volume = {896},
   number = {2},
@@ -665,7 +676,7 @@
 
 @misc{vollickMeaningVariousMass2021,
   title = {On the {{Meaning}} of {{Various Mass Definitions}} for {{Asymptotically Flat Spacetimes}}},
-  year = {2021},
+  year = 2021,
   number = {arXiv:2101.12570},
   eprint = {2101.12570},
   publisher = {arXiv},
@@ -678,7 +689,7 @@
 @incollection{waleckaRelativisticNuclearManyBody1986,
   title = {The {{Relativistic Nuclear Many-Body Problem}}},
   booktitle = {New {{Vistas}} in {{Nuclear Dynamics}}},
-  year = {1986},
+  year = 1986,
   pages = {229--271},
   publisher = {Springer US},
   address = {Boston, MA},
@@ -691,7 +702,7 @@
 
 @article{waleckaTheoryHighlyCondensed1974,
   title = {A Theory of Highly Condensed Matter},
-  year = {1974},
+  year = 1974,
   journal = {Annals of Physics},
   volume = {83},
   number = {2},
@@ -704,7 +715,7 @@
 
 @book{weinbergQuantumTheoryFields1995,
   title = {The {{Quantum Theory}} of {{Fields}}},
-  year = {1995},
+  year = 1995,
   edition = {1},
   publisher = {Cambridge University Press},
   doi = {10.1017/CBO9781139644167},
