Realiza correcciones al capitulo 3

--- a/Libro_Trabajo_de_Grado/Tesis.bib
+++ b/Libro_Trabajo_de_Grado/Tesis.bib
@@ -11,6 +11,17 @@
   author = {Abbott, B. P. and Abbott, R. and Abbott, T. D. and Acernese, F. and others}
 }
 
+@article{acharyaGlobalBaryonNumber2020,
+  title = {Global Baryon Number Conservation Encoded in Net-Proton Fluctuations Measured in {{Pb}}--{{Pb}} Collisions at s {{NN}} = 2.76 {{TeV}}},
+  year = 2020,
+  journal = {Physics Letters B},
+  volume = {807},
+  pages = {135564},
+  doi = {10.1016/j.physletb.2020.135564},
+  langid = {english},
+  author = {Acharya, S. and Adamov{\'a}, D. and Adler, A. and Adolfsson, J. and others}
+}
+
 @article{annalaMultimessengerConstraintsUltradense2022,
   title = {Multimessenger Constraints for Ultra-Dense Matter},
   year = 2022,
@@ -73,6 +84,17 @@
   doi = {10.1073/pnas.20.5.254},
   langid = {english},
   author = {Baade, W. and Zwicky, F.}
+}
+
+@article{baczykIsospinsymmetryBreakingMasses2018,
+  title = {Isospin-Symmetry Breaking in Masses of {{N}}{$\simeq$}{{Z}} Nuclei},
+  year = 2018,
+  journal = {Physics Letters B},
+  volume = {778},
+  pages = {178--183},
+  doi = {10.1016/j.physletb.2017.12.068},
+  langid = {english},
+  author = {Baczyk, P. and Dobaczewski, J. and Konieczka, M. and Satu{\l}a, W. and others}
 }
 
 @article{baymGroundStateMatter1971,
@@ -229,7 +251,7 @@
 @article{einsteinFeldgleichungenGravitation1915,
   title = {Die {{Feldgleichungen}} Der {{Gravitation}}},
   year = 1915,
-  journal = {Sitzungsberichte der K{\"o}niglich Preussischen Akademie der Wissenschaften},
+  journal = {Sitzungsberichte der K\"oniglich Preussischen Akademie der Wissenschaften},
   pages = {844--847},
   annotation = {ADS Bibcode: 1915SPAW.......844E},
   author = {Einstein, Albert}
@@ -320,6 +342,19 @@
   archiveprefix = {arXiv},
   keywords = {Astrophysics - High Energy Astrophysical Phenomena,Nuclear Theory},
   author = {Guo, Ling-Jun and Ma, Yao and Ma, Yong-Liang and Wu, Ruo-Xi and others}
+}
+
+@article{gurrExperimentalTestBaryon1967,
+  title = {Experimental {{Test}} of {{Baryon Conservation}}},
+  year = 1967,
+  journal = {Phys. Rev.},
+  volume = {158},
+  number = {5},
+  pages = {1321--1330},
+  doi = {10.1103/PhysRev.158.1321},
+  copyright = {http://link.aps.org/licenses/aps-default-license},
+  langid = {english},
+  author = {Gurr, H. S. and Kropp, W. R. and Reines, F. and Meyer, B. and others}
 }
 
 @misc{horvathBirthEventsMasses2020,
@@ -660,7 +695,7 @@
 }
 
 @article{theligoscientificcollaborationGW190814GravitationalWaves2020,
-  title = {{{GW190814}}: {{Gravitational Waves}} from the {{Coalescence}} of a 23 {{M}}\$\_{\textbackslash}odot\$ {{Black Hole}} with a 2.6 {{M}}\$\_{\textbackslash}odot\$ {{Compact Object}}},
+  title = {{{GW190814}}: {{Gravitational Waves}} from the {{Coalescence}} of a 23 {{M}}\$\_\textbackslash odot\$ {{Black Hole}} with a 2.6 {{M}}\$\_\textbackslash odot\$ {{Compact Object}}},
   shorttitle = {{{GW190814}}},
   year = 2020,
   journal = {ApJL},
