--- a/Libro_Trabajo_de_Grado/main.tex
+++ b/Libro_Trabajo_de_Grado/main.tex
@@ -71,6 +71,7 @@
 \newcommand{\masasol}{\,\text{M}_\odot}
 \newcommand{\rhomeson}{\boldsymbol{\rho}}
 \newcommand{\half}{\tfrac{1}{2}}
+\newcommand{\xsigma}{\tilde{x}_\sigma}
 
 % Reiniciar el contador de ecuaciones al principio de cada subsección -------------------------
 
