Corrige la redacción sobre la determinación de propiedades y agrega métodos usados para el ajuste de parámetros en literatura

--- a/Libro_Trabajo_de_Grado/TesisPregrado.bib
+++ b/Libro_Trabajo_de_Grado/TesisPregrado.bib
@@ -173,6 +173,19 @@
   author = {Chatziioannou, Katerina and Cromartie, H. Thankful and Gandolfi, Stefano and Tews, Ingo and others}
 }
 
+@article{chenBuildingRelativisticMean2014,
+  title = {Building Relativistic Mean Field Models for Finite Nuclei and Neutron Stars},
+  year = 2014,
+  journal = {Phys. Rev. C},
+  volume = {90},
+  number = {4},
+  pages = {044305},
+  doi = {10.1103/PhysRevC.90.044305},
+  copyright = {http://link.aps.org/licenses/aps-default-license},
+  langid = {english},
+  author = {Chen, Wei-Chia and Piekarewicz, J.}
+}
+
 @article{chinEquationStateNuclear1974,
   title = {An Equation of State for Nuclear and Higher-Density Matter Based on Relativistic Mean-Field Theory},
   year = 1974,
@@ -554,20 +567,6 @@
   copyright = {http://link.aps.org/licenses/aps-default-license},
   langid = {english},
   author = {Oppenheimer, J. R. and Volkoff, G. M.}
-}
-
-@article{ozelMassesRadiiEquation2016,
-  title = {Masses, {{Radii}}, and {{Equation}} of {{State}} of {{Neutron Stars}}},
-  year = 2016,
-  journal = {Annu. Rev. Astron. Astrophys.},
-  volume = {54},
-  number = {1},
-  eprint = {1603.02698},
-  pages = {401--440},
-  doi = {10.1146/annurev-astro-081915-023322},
-  archiveprefix = {arXiv},
-  keywords = {Astrophysics - High Energy Astrophysical Phenomena,General Relativity and Quantum Cosmology,Nuclear Theory},
-  author = {Ozel, Feryal and Freire, Paulo}
 }
 
 @book{peskinIntroductionQuantumField2018,
