--- a/Libro_Trabajo_de_Grado/main.tex
+++ b/Libro_Trabajo_de_Grado/main.tex
@@ -36,7 +36,7 @@
 %\usepackage[square,sort,comma,numbers]{natbib} %Para ver solo números
 %\usepackage[square,sort,comma]{natbib}
 \usepackage[style=ieee, backend=biber, maxnames=2, citestyle=numeric-comp]{biblatex}
-\addbibresource{Tesis\string Pregrado.bib}
+\addbibresource{TesisPregrado.bib}
 \setlength{\parindent}{0pt} %Quitar indentación
 \decimalpoint
 
