Añade discusión sobre los valores obtenidos para las propiedades estelares.

--- a/Libro_Trabajo_de_Grado/TesisPregrado.bib
+++ b/Libro_Trabajo_de_Grado/TesisPregrado.bib
@@ -382,6 +382,18 @@
   author = {Gurr, H. S. and Kropp, W. R. and Reines, F. and Meyer, B. and others}
 }
 
+@article{hernandezAcceptabilityConditionsRelativistic2021,
+  title = {Acceptability Conditions and Relativistic Barotropic Equations of State},
+  year = 2021,
+  journal = {Eur. Phys. J. C},
+  volume = {81},
+  number = {3},
+  pages = {241},
+  doi = {10.1140/epjc/s10052-021-09044-5},
+  langid = {english},
+  author = {Hern{\'a}ndez, H{\'e}ctor and {Su{\'a}rez-Urango}, Daniel and N{\'u}{\~n}ez, Luis A.}
+}
+
 @article{horowitzInsightsNuclearSaturation2020,
   title = {Insights into Nuclear Saturation Density from Parity-Violating Electron Scattering},
   year = 2020,
@@ -531,6 +543,19 @@
   author = {Misner, Charles W. and Thorne, Kip S. and Wheeler, John Archibald and Kaiser, David and others}
 }
 
+@article{mullerRelativisticMeanfieldTheory1996,
+  title = {Relativistic Mean-Field Theory and the High-Density Nuclear Equation of State},
+  year = 1996,
+  journal = {Nuclear Physics A},
+  volume = {606},
+  number = {3-4},
+  pages = {508--537},
+  doi = {10.1016/0375-9474(96)00187-X},
+  copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
+  langid = {english},
+  author = {M{\"u}ller, Horst and Serot, Brian D.}
+}
+
 @article{myersNuclearPropertiesAccording1996,
   title = {Nuclear Properties According to the {{Thomas-Fermi}} Model},
   year = 1996,
@@ -640,6 +665,18 @@
   archiveprefix = {arXiv},
   keywords = {Astrophysics - High Energy Astrophysical Phenomena,Astrophysics - Solar and Stellar Astrophysics,Nuclear Theory},
   author = {Riley, Thomas E. and Watts, Anna L. and Ray, Paul S. and Bogdanov, Slavko and others}
+}
+
+@article{rileyNICERViewPSR2019,
+  title = {A {{NICER View}} of {{PSR J0030}}+0451: {{Millisecond Pulsar Parameter Estimation}}},
+  shorttitle = {A {{NICER View}} of {{PSR J0030}}+0451},
+  year = 2019,
+  journal = {ApJL},
+  volume = {887},
+  number = {1},
+  pages = {L21},
+  doi = {10.3847/2041-8213/ab481c},
+  author = {Riley, T. E. and Watts, A. L. and Bogdanov, S. and Ray, P. S. and others}
 }
 
 @article{romaniPSRJ09520607Fastest2022,
