--- a/Libro_Trabajo_de_Grado/main.tex
+++ b/Libro_Trabajo_de_Grado/main.tex
@@ -1,4 +1,4 @@
-\documentclass[8pt, letterpaper]{report}
+\documentclass[8pt, letterpaper, twoside]{report}
 
 % Paquetes --------------------------------------------------------------------------
 \usepackage{bm}
@@ -32,6 +32,7 @@
 \usepackage{color}
 \usepackage{braket}
 \usepackage[nottoc]{tocbibind}
+\usepackage{lscape}
 %\usepackage{natbib}
 %\usepackage[square,sort,comma,numbers]{natbib} %Para ver solo números
 %\usepackage[square,sort,comma]{natbib}
@@ -117,16 +118,22 @@
 
 % Configuración de encabezado y pie de página
 \pagestyle{fancy}
-\fancyhf{} % Limpia los encabezados y pies de página predeterminados
-\fancyhead[L]{\leftmark}
+\fancyhf{}
 \fancyhead[R]{\thepage}
+\fancyhead[LE]{\leftmark}
+\fancyhead[LO]{\rightmark}
+
+% Aseguramos que el header derecho tenga el capítulo si no hay sección
+\renewcommand{\chaptermark}[1]{%
+  \markboth{\MakeUppercase{\chaptername\ \thechapter.\ #1}}{%
+  \MakeUppercase{\chaptername\ \thechapter.\ #1}}%
+}
 
 % Redefinir el estilo de página de la primera página de cada capítulo
 \fancypagestyle{plain}{%
-  \fancyhf{} % Limpia los encabezados y pies de página predeterminados
-  \fancyhead[L]{}
-  \fancyhead[C]{Universidad Industrial de Santander}
-  \fancyhead[R]{\thepage}
+  \fancyhf{}
+  \renewcommand{\headrulewidth}{0pt}
+  % \fancyfoot[C]{\thepage}
 }
 \titlespacing*{\chapter}{0pt}{50pt}{20pt} %Cambio los valores del espacio entre el título del cap y el encabezado
 
@@ -212,6 +219,8 @@
 
 % Página de resumen
 \clearpage
+\phantomsection
+\addcontentsline{toc}{chapter}{Resumen}
 %\thispagestyle{empty}
 \vspace*{1cm} % Ajusta este valor según tu preferencia
 \begin{flushleft}
@@ -229,6 +238,8 @@
 % Añadir la página de resumen al PDF pero no a la tabla de contenidos
 %\addcontentsline{toc}{chapter}{Resumen}
 
+\clearpage
+\pagestyle{fancy}
 
 %Capítulo 1
 \input{Chapter1/chapter1.tex}
@@ -251,7 +262,7 @@
 
 %\bibliographystyle{ieeetr}
 %\bibliography{PropuestadeTesis}
-\printbibliography
+\printbibliography[heading=bibintoc, title={Bibliografía}]
 
 
 %\renewcommand{\bibname}{Referencias}
