Añade discusión sobre descomposicion de B/A, condiciones de aceptabilidad, compacidad máxima, c negativo y n_n/n_B respecto al gas ideal.

--- a/Libro_Trabajo_de_Grado/TesisPregrado.bib
+++ b/Libro_Trabajo_de_Grado/TesisPregrado.bib
@@ -543,6 +543,18 @@
   author = {Misner, Charles W. and Thorne, Kip S. and Wheeler, John Archibald and Kaiser, David and others}
 }
 
+@misc{moustakidisStabilityRelativisticStars2017,
+  title = {The Stability of Relativistic Stars and the Role of the Adiabatic Index},
+  year = 2017,
+  number = {arXiv:1612.01726},
+  eprint = {1612.01726},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.1612.01726},
+  archiveprefix = {arXiv},
+  keywords = {Astrophysics - High Energy Astrophysical Phenomena,Astrophysics - Solar and Stellar Astrophysics,General Relativity and Quantum Cosmology,Nuclear Theory},
+  author = {Moustakidis, Ch C.}
+}
+
 @article{mullerRelativisticMeanfieldTheory1996,
   title = {Relativistic Mean-Field Theory and the High-Density Nuclear Equation of State},
   year = 1996,
@@ -637,6 +649,18 @@
   doi = {10.1140/epja/s10050-022-00772-0},
   langid = {english},
   author = {Raduta, Adriana R.}
+}
+
+@misc{ramos-salamancaPhysicalAcceptabilityConditions2021,
+  title = {Physical Acceptability Conditions for Realistic Neutron Star Equations of State},
+  year = 2021,
+  number = {arXiv:2102.00340},
+  eprint = {2102.00340},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2102.00340},
+  archiveprefix = {arXiv},
+  keywords = {General Relativity and Quantum Cosmology},
+  author = {{Ramos-Salamanca}, D. and N{\'u}{\~n}ez, L. A. and Ospino, J.}
 }
 
 @article{reiseneggerOrderofmagnitudePhysicsNeutron2016,
