Actualiza el resumen, la introducción y conclusiones del trabajo para mostrar lo hallado.

--- a/Libro_Trabajo_de_Grado/TesisPregrado.bib
+++ b/Libro_Trabajo_de_Grado/TesisPregrado.bib
@@ -11,6 +11,17 @@
   author = {Abbott, B. P. and Abbott, R. and Abbott, T. D. and Acernese, F. and others}
 }
 
+@article{abreuSoundSpeedsCracking2007,
+  title = {Sound Speeds, Cracking and the Stability of Self-Gravitating Anisotropic Compact Objects},
+  year = 2007,
+  journal = {Class. Quantum Grav.},
+  volume = {24},
+  number = {18},
+  pages = {4631--4645},
+  doi = {10.1088/0264-9381/24/18/005},
+  author = {Abreu, H and Hern{\'a}ndez, H and N{\'u}{\~n}ez, L A}
+}
+
 @article{acharyaGlobalBaryonNumber2020,
   title = {Global Baryon Number Conservation Encoded in Net-Proton Fluctuations Measured in {{Pb}}--{{Pb}} Collisions at s {{NN}} = 2.76 {{TeV}}},
   year = 2020,
@@ -604,6 +615,18 @@
   copyright = {http://link.aps.org/licenses/aps-default-license},
   langid = {english},
   author = {Oppenheimer, J. R. and Volkoff, G. M.}
+}
+
+@article{ospinoRelativisiticNonpascalianFluid2025,
+  title = {Relativisitic Non-Pascalian Fluid as a Density Contribution},
+  year = 2025,
+  journal = {Eur. Phys. J. C},
+  volume = {85},
+  number = {4},
+  pages = {412},
+  doi = {10.1140/epjc/s10052-025-14132-x},
+  langid = {english},
+  author = {Ospino, Justo and {Su{\'a}rez-Urango}, Daniel and Becerra, Laura M. and Hern{\'a}ndez, H. and others}
 }
 
 @book{peskinIntroductionQuantumField2018,
