--- a/Libro_Trabajo_de_Grado/main.tex
+++ b/Libro_Trabajo_de_Grado/main.tex
@@ -226,9 +226,9 @@
 \begin{flushleft}
     {\huge\bfseries Resumen\par}
     \vspace{0.5cm}
-    En el presente trabajo se propone obtener Ecuaciones de Estado (EdE) de una Estrella de Neutrones (EN) mediante la Teoría Relativista de Campo Medio (TRCM). Las EN son objetos cuyas condiciones extremas permiten estudiar la materia nuclear a altas densidades, inalcanzables en laboratorio con la tecnología actual. A través de las EdE, se busca modelar la relación entre  la presión y la densidad de energía en el núcleo estelar, lo cual resulta fundamental para describir propiedades observables de la EN como su masa,  radio y  deformación de marea. Este estudio responde a la necesidad de conectar modelos teóricos con datos experimentales y observacionales, especialmente  aquellos obtenidos por misiones como LIGO, VIRGO y NICER.
-    
-    Las EdE construidas contienen parámetros libres que describen las interacciones y propiedades microscópicas de la materia. Este proyecto tiene como objetivo construir y ajustar modelos de EdE utilizando datos astrofísicos recientes. Adicionalmente, se investigará la capacidad de la EdE hallada para predecir objetos en el Mass-Gap, un rango de valores entre estrellas de neutrones masivas y agujeros negros ligeros, cuya composición sigue siendo debatida. Este enfoque permitirá modelar la estructura de las EN y contribuir al conocimiento de la materia nuclear en condiciones extremas.
+    En este trabajo se estudió la ecuación de estado de la materia nuclear en condiciones de alta densidad, aplicable al interior de estrellas de neutrones, utilizando el marco de la Teoría de Campo Medio Relativista con acoplamientos no lineales. El objetivo principal fue construir modelos que satisfagan las restricciones astrofísicas actuales y examinar la viabilidad de estrellas de neutrones masivas que puedan reproducir las observaciones más recientes. Se exploró el espacio de parámetros del modelo, analizando las correlaciones entre los acoplamientos de los campos mesónicos ($\sigma, \omega, \rho$) junto con los parámetros de autointeracción escalar, y las propiedades macroscópicas estelares obtenidas mediante la integración de las ecuaciones de Tolman-Oppenheimer-Volkoff.
+
+    Los resultados mostraron una jerarquía en la influencia de los parámetros: los acoplamientos isoescalares $A_\sigma, A_\omega$ y los términos de autointeracción $b, c$ gobiernan la rigidez de la ecuación de estado y la masa máxima, mientras que el acoplamiento isovectorial $A_\rho$ afecta casi exclusivamente al radio y a la energía de simetría, sin alterar las propiedades de saturación ni el límite de masa. Este modelo permitió encontrar configuraciones que satisfacen simultáneamente las restricciones nucleares y astrofísicas. Se obtuvieron estrellas con masas máximas de hasta $2.79 \masasol$, compatibles con el componente secundario de \textit{GW190814}, y radios para estrellas canónicas ($1.4 \masasol$) consistentes con las observaciones de NICER. Finalmente, se verificó el cumplimiento de las condiciones de aceptabilidad física, garantizando la causalidad y estabilidad mecánica de las soluciones.
 
     
 \end{flushleft}
